Salesforce/force-app/main/default/objects/Meta__c/Meta__c.object-meta.xml
<CustomObject>
    <label>Meta</label>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Meta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>