Salesforce/force-app/main/default/objects/Meta__c/fields/Contatos__c.field-meta.xml
<CustomField>
    <fullName>Contatos__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Metas</relationshipLabel>
    <relationshipName>Metas</relationshipName>
    <type>Lookup</type>
</CustomField>