Salesforce/force-app/main/default/objects/Meta__c/fields/Valor_Meta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Meta__c</fullName>
    <label>Valor da Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>