Salesforce/force-app/main/default/objects/Meta__c/validationRules/Campos_Obrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Obrigatorios</fullName>
    <active>true</active>
    <description>Não cria o registro se o Valor da Meta estiver em branco.</description>
    <errorConditionFormula>ISBLANK( Valor_Meta__c)||
ISBLANK( Users__c ) || 
ISBLANK( Contatos__c  )</errorConditionFormula>
    <errorMessage>É Obrigatório o preenchimento destes campos.</errorMessage>
</ValidationRule>